--- a/app/src/main/res/layout/affiche_question.xml
+++ b/app/src/main/res/layout/affiche_question.xml
@@ -1,17 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent">
-
-    <EditText
-        android:id="@+id/textQuestion"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_marginBottom="90dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/retour"
@@ -22,4 +12,14 @@
         android:layout_marginBottom="24dp"
         android:onClick="onClickRetour"
         android:text="Retour" />
+
+    <TextView
+        android:id="@+id/textQuestion"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:maxLines="19"
+        android:text="Qusetion"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
